WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250677
[MQ4] "layer" is invalid as media type name
https://bugs.webkit.org/show_bug.cgi?id=250677
Summary
[MQ4] "layer" is invalid as media type name
Antti Koivisto
Reported
2023-01-16 05:46:40 PST
css/mediaqueries/mq-invalid-media-type-layer-001/002.html
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-16 06:17:31 PST
<
rdar://problem/104297917
>
Antti Koivisto
Comment 2
2023-01-16 06:18:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8690
EWS
Comment 3
2023-01-16 09:36:08 PST
Committed
258957@main
(6cb0400c49f7): <
https://commits.webkit.org/258957@main
> Reviewed commits have been landed. Closing PR #8690 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug