[MQ4] "layer" is invalid as media type name https://bugs.webkit.org/show_bug.cgi?id=250677 rdar://104297917

Reviewed by Sam Weinig.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/mediaqueries/mq-invalid-media-type-layer-002-expected.txt:
* Source/WebCore/css/query/MediaQueryParser.cpp:
(WebCore::MQ::MediaQueryParser::consumeMediaQuery):

Canonical link: https://commits.webkit.org/258957@main